Implemented login functionality

--- a/book-store/src/app/book-detail/book-detail.component.html
+++ b/book-store/src/app/book-detail/book-detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="book">
 
   <h2>{{book.name | uppercase}} Details</h2>
-  <div><span>availability: </span>{{book.availability}}</div>
+  <div><span>price: </span>{{book.price}}</div>
   <div><span>description: </span>{{book.description}}</div>
   
 
