--- a/book-store/src/app/login/login.component.html
+++ b/book-store/src/app/login/login.component.html
@@ -1,3 +1,24 @@
 <div>New users can register by signing up</div>
 <div>Login using your username and password to buy products</div>
-<router-outlet></router-outlet>
+
+<div id="loginDiv">
+<!-- <form [formGroup]="registerForm"> -->
+<div class="form-group">
+<label>Username</label>
+<input type="email" fromControlName ="email" class="form-control" required>
+
+</div>
+<div class="form-group">
+<label>Password</label>
+<input type="password" fromControlName ="password" class="form-control" required>
+<label class="error">{{errorMessage}}</label>
+<label class="error">{{successMessage}}</label>
+
+</div>
+
+<button type= "submit" class="btn-default" (click)="tryRegister(registerForm.value)" class="btn btn-default">Signup</button>
+<button type= "submit" class="btn-default" routerLink="/authenticate">Login</button>
+<button type= "submit" class="btn-default" routerLink="/manager">Manager</button>
+
+<!-- </form> -->
+</div>
