--- a/book-store/src/app/login/login.component.html
+++ b/book-store/src/app/login/login.component.html
@@ -1,24 +1,23 @@
 <div>New users can register by signing up</div>
 <div>Login using your username and password to buy products</div>
 
-<div id="loginDiv">
-<!-- <form [formGroup]="registerForm"> -->
-<div class="form-group">
+<div>
+<div>
 <label>Username</label>
-<input type="email" fromControlName ="email" class="form-control" required>
+<input type="email" [(ngModel)]="username" required>
 
 </div>
-<div class="form-group">
+<div>
 <label>Password</label>
-<input type="password" fromControlName ="password" class="form-control" required>
-<label class="error">{{errorMessage}}</label>
-<label class="error">{{successMessage}}</label>
+<input type="password"  [(ngModel)]="password" required>
+
 
 </div>
 
-<button type= "submit" class="btn-default" (click)="tryRegister(registerForm.value)" class="btn btn-default">Signup</button>
-<button type= "submit" class="btn-default" routerLink="/authenticate">Login</button>
-<button type= "submit" class="btn-default" routerLink="/manager">Manager</button>
+<button type= "submit"  (click)="newUser(username,password)">Signup</button>
+<button type= "submit"  (click)="oldUser(username,password)">Login</button>
+<button type= "submit"  routerLink="/manager">Manager</button>
 
-<!-- </form> -->
+
 </div>
+<router-outlet></router-outlet>
