Implemented manager add item functionality

--- a/book-store/src/app/books/books.component.html
+++ b/book-store/src/app/books/books.component.html
@@ -1,5 +1,8 @@
+
 <button routerLink="/login">Login</button>
-  
+<h3>Welcome to the home of your Online Bookstore.Please browse our inventory of hard to find,
+out of print,used and rare books.<br>Our book collection consists of the top bestsellers of 2018 and 2017
+of different genres like fiction,mythology,autobiography,Sci-fi and lots more.</h3>
 
 <ul class="books">
   <li  *ngFor="let book of books"  (click)="onSelect(book)">
