--- a/book-store/src/app/book-detail/book-detail.component.html
+++ b/book-store/src/app/book-detail/book-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="book">
 
-  <h2>{{book.name | uppercase}} Details</h2>
+  <h2>{{book.description | uppercase}} Details</h2>
   <div><span>description: </span>{{book.description}}</div>
   <div><span>price: </span>{{book.price}}</div>
   
