implemented rating and reviews

--- a/book-store/src/app/authenticated-user/authenticated-user.component.html
+++ b/book-store/src/app/authenticated-user/authenticated-user.component.html
@@ -96,6 +96,6 @@
         </td>
     </tr>
 </table>
-
+<button (click)="BuyCart(book)">Buy</button>
 <app-oneproduct [book]="selectedBook"></app-oneproduct>
 <router-outlet></router-outlet>
