clear cart functionality for authenticated user

--- a/book-store/src/app/authenticated-user/authenticated-user.component.html
+++ b/book-store/src/app/authenticated-user/authenticated-user.component.html
@@ -100,6 +100,6 @@
         </td>
     </tr>
 </table>
-<button (click)="BuyCart(book)">Buy</button>
+<button (click)="BuyCart()">Buy</button>
 <app-oneproduct [book]="selectedBook"></app-oneproduct>
 <router-outlet></router-outlet>
